# AI_Hackathon_CDSS

./: .env.example  .gitignore  48201_apps.txt  App_48201.jsx  App_ad268.jsx  Dockerfile.backend  Dockerfile.frontend  README.md  ad268_apps.txt  ad268_files.txt  all-secrets.json  api_log_streams.json  api_logs.json  aurora_details.json  bedrock-agent-policy.json  check_db.py  debug_conn.py  docker-compose.yml  full_logs.json  log_events.json  log_streams.json  nginx.conf  payload.json  payload_seed.json  phase3_verify_out.txt  pyproject.toml  response.json  secret_val.json  seed_response.json  temp_script.py  test_api.py  test_connections.py  test_db_conn.py
CDSS/: pyvenv.cfg
agentcore/: README.md
agentcore/agent/cdssagent/: .bedrock_agentcore.yaml  pyproject.toml  requirements-runtime.txt
agentcore/agent/cdssagent/.bedrock_agentcore/cdssagent_Agent/: dependencies.hash
agentcore/agent/cdssagent/src/: main.py
agentcore/agent/cdssagent/src/mcp_client/: client.py
agentcore/agent/cdssagent/src/model/: load.py
clinical-decision-support-system/: requirements.md
config/: README.md  aurora_tunnel_config.json  gateway-config.json  gateway-config.schema.json
docs/: AC3_AURORA_GATEWAY_DEBUG.md  BASTION_AND_DB_QUERIES.md  BASTION_AND_SEED_REFERENCE.md  BEDROCK_LOCAL_SETUP.md  COGNITO_SUPERUSER.md  COMPLIANCE_CHECKLIST.md  CONNECTION_TROUBLESHOOTING.md  CONNECT_DATABASE_AND_BUTTONS.md  CONNECT_DEPLOYED_BACKEND_TO_DATABASE.md  DASHBOARD_QUICK_START.md  DATABASE_SCHEMA_FRONTEND_ALIGNMENT.md  DEBUGGING_API_AND_DATABASE.md  DEBUGGING_REPORT_2026_03_08.md  ONBOARDING.md  (+53 more)
(+479 files in other folders)
