[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdss"
version = "0.1.0"
description = "Clinical Decision Support System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
